src/App.css
@import url('https://fonts.googleapis.com/css2?family=Courgette&display=swap');
@import url('https://fonts.googleapis.com/css2?family=LXGW+WenKai+Mono+TC&display=swap');
* {
  margin: 0;
  box-sizing: border-box;
}

#root {
  font-family: 'LXGW WenKai Mono TC', monospace;
  font-weight: 400;
  font-style: normal;

  max-width: 1280px;
  margin: 0px;
  padding: 2rem;
  display: flex;
  flex-direction: column;
  align-items: center;

  --main-bgc: #f6f4efff;
  --l-tan: #ebdac4ff;
  --m-tan: #e6d0b2ff;
  --d-tan: #e4c8a2ff;
  --l-green: #cae4daff;
  --m-green: #b0cdc2ff;
  --d-green: #8eb8a8ff;
  --l-rose: #edd6d6ff;
  --m-rose: #e8c4c4ff;
  --d-rose: #dba6a6ff;
}

.section {
  margin-bottom: 2rem;
  padding: 1rem;
  box-shadow: rgba(0, 0, 0, 0.09) 0px 3px 12px;
  border-radius: 20px;
}

.carousel {
  box-shadow: none;
  text-align: center;
  margin-bottom: 0rem;
}

.section h1 {
  font-family: 'Courgette', cursive;
  font-weight: 400;
  font-style: normal;
}

header {
  background-image: url('/Colorful-Pastel-Modern-Banner.png');
  background-size: cover;
  background-repeat: no-repeat;
  background-position: center;
  border-radius: 20px;
  padding: 15px;

  display: grid;
  grid-template-columns: 1fr 2fr;
  grid-template-rows: 1fr 1fr;
  grid-template-areas: ' image name' 'image tagline';
}

header h1 {
  font-size: 2.75rem;
}

#selfie {
  grid-area: image;
  justify-self: center;
  height: 300px;
  border-radius: 50% 0;
  box-shadow:
    rgba(0, 0, 0, 0.25) 0px 54px 55px,
    rgba(0, 0, 0, 0.12) 0px -12px 30px,
    rgba(0, 0, 0, 0.12) 0px 4px 6px,
    rgba(0, 0, 0, 0.17) 0px 12px 13px,
    rgba(0, 0, 0, 0.09) 0px -3px 5px;
  /* box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px; */
}

header h1 {
  grid-area: name;
  align-self: flex-end;
  justify-self: center;
}

header .tagline {
  grid-area: tagline;
  align-self: flex-start;
  justify-self: center;
}
header h1,
header div,
header p {
  height: fit-content;
  width: fit-content;
  margin: 0px;
}

.carousel-track {
  overflow: hidden;
  position: relative;
  box-shadow: none;
  height: 175px;
  width: 100%;
}

.carousel-items-container {
  display: flex;
  position: absolute;
  left: 0;
  gap: 5%;
  width: 200%;
  height: 80%;
  justify-content: center;
  align-items: center;
  animation: slide 35s linear infinite;
}

/* .carousel-items-container:hover {
  animation-play-state: paused;
} */

@keyframes slide {
  0% {
    left: 0;
  }
  100% {
    left: -100%;
  }
}

.carousel-item {
  justify-self: center;
}

.carousel-item img {
  max-height: 64px;
  min-height: 35px;
}

.about-me-section {
  /* border: 3px solid var(--d-green); */
  background-color: var(--d-green);
  box-shadow: rgba(0, 0, 0, 0.09) 0px 3px 12px;
  border-radius: 20px;
  display: grid;
  grid-template-columns: 1fr 2fr;
}

.about-me-section .section-label {
  height: fit-content;
  justify-self: center;
  align-self: center;
}

.about-me-section .content {
  background-color: var(--l-green);
  border-radius: 20px 0;
  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
  padding: 2%;
}

.content p {
  margin-bottom: 1rem;
}

.project-section {
  background-color: var(--d-rose);
  padding-bottom: 5%;
}

.project-section h1 {
  margin-bottom: 2%;
}

.all-projects-container {
  display: grid;
  grid-template-columns: 1fr 1fr 1fr;
  grid-auto-rows: auto;
  gap: 3%;
}

.project-card {
  background-color: var(--l-rose);
  border-radius: 20px;
  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
  padding: 2%;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: space-evenly;
}

.project-card:hover {
  scale: 1.1;
  z-index: 2;
}

.project-image {
  border-radius: 8px;
  width: 90%;
  height: auto;
  margin-bottom: 5%;
}
.project-details {
  width: 100%;
  display: grid;
  grid-template-columns: 1fr 2fr;
  grid-template-rows: 2fr 1fr;
  grid-template-areas:
    'description description'
    'label tools';
  gap: 3%;
}
.description {
  padding: 2%;
  grid-area: description;
}

.label {
  font-weight: bold;
  font-style: italic;
  padding-left: 2%;
  grid-area: label;
}
.tools {
  font-style: italic;
  padding-right: 2%;
  grid-area: tools;
}

.project-buttons {
  align-self: flex-end;
  width: 30%;
  display: flex;
  flex-direction: row;
  justify-content: space-evenly;
}

.contact-container {
  background-color: var(--d-tan);
}

.contact-section {
  background-color: var(--l-tan);
  margin-bottom: 0px;
  display: grid;
  grid-template-columns: 1fr 2fr;
  gap: 2%;
}

.contact-section .section-label {
  height: fit-content;
  width: fit-content;
  justify-self: center;
  align-self: center;
  background-color: var(--l-tan);
  border-radius: 0 20px;
  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
  padding: 1.5rem;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  align-items: center;
}

.contact-leftside {
  display: flex;
  flex-direction: column;
  align-items: center;
}

#selfie2 {
  height: 200px;
  width: auto;
  border-radius: 20px;
}

.contact-rightside {
  display: flex;
  flex-direction: column;
  justify-content: center;
}

.phone-info,
.email-info,
.contact-rightside p {
  width: fit-content;
  display: flex;
  flex-direction: row;
  gap: 1rem;
  align-items: center;
  margin-bottom: 1rem;
}
.phone-info p,
.email-info p {
  margin-bottom: 0;
}

.phone-info img,
.email-info img {
  height: 1rem;
  width: 1rem;
}

.socials {
  display: flex;
  flex-direction: row;
  justify-content: flex-start;
}

.socials img {
  height: 1.5rem;
  width: 1.5rem;
  margin-right: 2rem;
}

@media (max-width: 900px) {
  #root {
    padding: 1rem 0;
  }
  .app-container {
    width: 100%;
    display: flex;
    flex-direction: column;
    align-items: center;
  }
  .section {
    width: 90%;
    margin-bottom: 1rem;
  }

  header {
    background-image: url('/cropped-banner.png');
    background-size: cover;
    background-repeat: no-repeat;
    background-position: center;

    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    text-align: center;
  }

  header h1 {
    align-self: center;
  }

  #selfie {
    box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
  }

  .carousel-track {
    overflow: hidden;
    position: relative;
    height: 70px;
    width: 95%;
    box-shadow: none;
    border-radius: 0px;
  }

  .carousel-items-container {
    gap: 8%;
    width: 200%;
    height: 80%;
    justify-content: center;
    align-items: center;
    animation: slide 15s linear infinite;
  }

  .carousel-item img {
    width: 45px;
    height: 45px;
  }

  .about-me-section {
    display: flex;
    flex-direction: column;
  }
  .all-projects-container {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
  }

  .project-card {
    width: 90%;
    margin-bottom: 2vh;
    padding: 2%;
    display: flex;
    flex-direction: column;
    align-items: center;
  }

  .project-image {
    width: 90%;
    height: auto;
  }
  .project-details {
    display: flex;
    flex-direction: column;
  }
  .project-buttons {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
  }
  .project-card:hover {
    scale: none;
    z-index: 2;
  }

  .contact-section {
    display: flex;
    flex-direction: column;
    gap: 1rem;
  }
}

/* Utility Class*/

